@@ -1,6 +1,6 @@
 MIDlet-1: Reversi, /icons/reversi.png, reversi.J2MEReversi
 MIDlet-Description: Reversi game
-MIDlet-Jar-Size: 20422
+MIDlet-Jar-Size: 20908
 MIDlet-Jar-URL: j2me_reversi.jar
 MIDlet-Name: J2MEReversi
 MIDlet-Vendor: Sala
