@@ -1,6 +1,7 @@
 0.73.00 2002-NOV-
 
 -Better display for small screen
+-Exit works in skill list
 -Company logo :-)
 
 0.72.00 2002-NOV-07
